--- a/app/views/partials/theme/simple/profile/owner_actions.liquid
+++ b/app/views/partials/theme/simple/profile/owner_actions.liquid
@@ -1,19 +1,28 @@
-<section class="mt-4 pt-4 border-t">
-  <header class="md:flex md:justify-between mb-2">
-    <h4 class="font-bold text-black text-lg  md:mr-6">Account</h4>
+<section class="pt-4 mt-4 border-t">
 
-    <a href="/dashboard/profile/edit" class="text-sm button">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 383.95 383.95" class="w-3 mr-1"><path d="M0 303.95v80h80l236.05-236.06-80-80zM377.7 56.05L327.9 6.24a21.37 21.37 0 00-30.2 0l-39.03 39.04 80 80 39.04-39.04a21.37 21.37 0 000-30.19z" fill="currentColor" /></svg>
-      Edit <span class="sr-only">name and avatar</span>
-    </a>
+  <header class="mb-2 md:flex md:justify-between">
+    <div class="text-2xl font-medium text-grey-darkest" id="user-name">
+      {{ user.first_name }} {{ user.last_name }} <span class="font-normal">({{ user.name }})</span>
+    </div>
+
     <!--
       <div class="md:ml-auto">
         <a class="link" href="/profile/password">Change password</a>
       </div>
     -->
   </header>
-  <p>User ID: <span class="font-mono">{{ user.id }}</span></p>
-  <p>Email: <span class="font-mono">{{ user.user.email }}</span></p>
 
-  <p><a href="/u/{{ user.id }}">{{ 'app.items.yours' | t }}</a></p>
+  <p>{{ user.user.email }}</p>
+
+  <p class="mt-3">{{ user.bio }}</p>
+  <!--
+    TOOD:
+    Move it to a tab to be consistent with my activities, my groups, etc.
+  -->
+  <!-- <p><a href="/u/{{ user.id }}">{{ 'app.items.yours' | t }}</a></p> -->
+
+  <a href="/dashboard/profile/edit" class="mt-4 button">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 383.95 383.95" class="w-3 mr-1"><path d="M0 303.95v80h80l236.05-236.06-80-80zM377.7 56.05L327.9 6.24a21.37 21.37 0 00-30.2 0l-39.03 39.04 80 80 39.04-39.04a21.37 21.37 0 000-30.19z" fill="currentColor" /></svg>
+    Edit <span class="sr-only">name and avatar</span>
+  </a>
 </section>
