--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -10,6 +10,10 @@
     </a>
 
     <nav class="flex flex-wrap items-center justify-center text-base md:ml-auto">
+      <form action="/quick_search" name="search">
+        {% include 'theme/simple/home/quick_search_form', query: search.query, filters: filters %}
+      </form>
+
       <a href="/dashboard/items/new" class="mr-5 hover:text-gray-900">{{ 'app.list-your-item' | t }}</a>
       <a href="/search" class="mr-5 hover:text-gray-900">{{ 'app.items.list' | t }}</a>
       <a href="/groups" class="mr-5 hover:text-gray-900">{{ 'app.groups.list' | t }}</a>
