--- a/app/views/partials/theme/simple/activities/feed_unit.liquid
+++ b/app/views/partials/theme/simple/activities/feed_unit.liquid
@@ -5,7 +5,7 @@
 
   <div class="py-2">
     <p class="leading-snug">
-      <div class="text-xs">{{ payload.object.description }}</div>
+      <p class="">{{ payload.object.description }}</p>
       {% print payload.object.body %}
     </p>
   </div>
