--- a/app/views/partials/theme/simple/profile/sections/activity.liquid
+++ b/app/views/partials/theme/simple/profile/sections/activity.liquid
@@ -8,6 +8,6 @@
   {% for record in list.results %}
     {% render 'theme/simple/activities/feed_unit', payload: record.payload, current_user: current_user %}
   {% else %}
-    <p class="container my-8 text-lg">{{ 'app.no_items_found' | t }}</p>
+    <p class="container my-8 text-lg">{{ 'app.no_activities_found' | t }}</p>
   {% endfor %}
 </section>
