--- a/app/views/partials/theme/simple/profile/sections/groups.liquid
+++ b/app/views/partials/theme/simple/profile/sections/groups.liquid
@@ -4,7 +4,7 @@
       {% for record in list.results %}
         {% render 'theme/simple/groups/card', group: record %}
       {% else %}
-        <p class="container my-8 text-lg">{{ 'app.no_items_found' | t }}</p>
+        <p class="container my-8 text-lg">{{ 'app.no_groups_found' | t }}</p>
       {% endfor %}
     </div>
   </section>
