--- a/app/views/partials/theme/simple/profile/user_card.liquid
+++ b/app/views/partials/theme/simple/profile/user_card.liquid
@@ -1,21 +1,22 @@
 <div class="p-4 md:w-1/3">
-  <div class="h-full border-2 border-gray-200 rounded-lg overflow-hidden pt-5 bg-white">
+  <div class="h-full pt-5 overflow-hidden bg-white border-2 border-gray-200 rounded-lg">
     {% liquid
       assign img_url = user.avatar.photo.versions.small
       unless img_url
         assign img_url = 'images/user.svg' | asset_url
       endunless
     %}
-    <img class="md:h-48 md:w-48 h-24 w-24 object-cover object-center rounded-full shadow-md mx-auto" src="{{ img_url }}" alt="blog">
+    <img class="object-cover object-center w-24 h-24 mx-auto rounded-full shadow-md md:h-48 md:w-48" src="{{ img_url }}" alt="{{ user.slug }}">
+
     <div class="p-6">
-      <h2 class="text-gray-900 title-font font-medium mb-1">
-        <a href="/profile/{{user.slug}}">
+      <h2 class="mb-1 font-medium text-gray-900 title-font">
+        <a href="/profile/{{ user.slug }}">
           {% print user.name %}
         </a>
       </h2>
-      <div class="flex items-center flex-wrap ">
+      <div class="flex flex-wrap items-center ">
         {% render 'theme/simple/follow_button', current_user: current_user, user: user %}
-        <span class="text-gray-600 mr-3 inline-flex items-center lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1" title="Following">
+        <span class="inline-flex items-center py-1 pr-3 ml-auto mr-3 text-sm leading-none text-gray-600 lg:ml-auto md:ml-0" title="Following">
           <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24"> <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path> <circle cx="12" cy="12" r="3"></circle> </svg>
           1.2K
         </span>
