Add sidebar to dashboard pages; Make feed main page of dashboard

--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -33,7 +33,7 @@
             <a href="/profile/{{profile.slug}}" class="block px-4 py-2 capitalize text-gray-700 hover:bg-blue-700 hover:text-white">
               Your profile
             </a>
-            <a href="/feed" class="block px-4 py-2 capitalize text-gray-700 hover:bg-blue-700 hover:text-white">
+            <a href="/dashboard" class="block px-4 py-2 capitalize text-gray-700 hover:bg-blue-700 hover:text-white">
               Activity Feed
             </a>
             <form action="/sessions/destroy" method="post">
