--- a/app/views/pages/dashboard/index.liquid
+++ b/app/views/pages/dashboard/index.liquid
@@ -1,11 +1,17 @@
+---
+metadata:
+  breadcrumbs:
+    - label: app.feed.title
+---
 {% liquid
   function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
   include 'lib/validate_profile_completeness', profile: current_user
 
-  comment
-  test
-  endcomment
-  include 'lib/commands/events/create', type: 'page_visited', actor_id: current_user.id, object: context.location
+  function list = 'lib/data/queries/activities/search', feed: 'user-private', feed_id: current_user.id, limit: 100
 
-  include 'theme/simple/dashboard/index', profile: current_user
+  graphql presigned_url = 'photos/presign' | dig: 'presigned'
+  include 'theme/simple/dashboard/breadcrumbs', name: 'feed'
+  include 'theme/simple/activities/feed/index', list: list, current_user: current_user, presigned_url: presigned_url
+  render 'theme/simple/items/follow.js', authenticity_token: context.authenticity_token
 %}
+
