--- a/app/views/partials/theme/simple/dashboard/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/index.liquid
@@ -45,9 +45,7 @@
     <div class="p-4 lg:w-1/2 md:w-full">
       <div class="flex flex-col p-8 border-2 border-gray-200 rounded-lg sm:flex-row">
         <div class="inline-flex items-center justify-center flex-shrink-0 w-16 h-16 mb-4 text-blue-600 bg-indigo-100 rounded-full sm:mr-8 sm:mb-0">
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="p-3">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
-          </svg>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="p-3"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" /> </svg>
         </div>
         <div class="flex-grow">
           <h2 class="mb-3 text-xl font-medium text-gray-900 ">{{ 'app.p-dashboard.community' | t }}</h2>
