--- a/app/views/partials/theme/simple/payments/account/success.liquid
+++ b/app/views/partials/theme/simple/payments/account/success.liquid
@@ -4,6 +4,6 @@
   </p>
 </div>
 
-<a class="button" href="/payments/account">
+<a class="button" href="/dashboard/payments/account">
   {{ 'app.continue' | t }}
 </a>
