--- a/app/views/pages/dashboard/payments/account/stripe-dashboard.liquid
+++ b/app/views/pages/dashboard/payments/account/stripe-dashboard.liquid
@@ -6,6 +6,6 @@
     log login_link_url, type: 'login_link_url'
     redirect_to login_link_url
   else
-    redirect_to '/payments/account'
+    redirect_to '/dashboard/payments/account'
   endif
 %}
