--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -81,8 +81,8 @@
         {%- if item.owner.id == current_user.id and item.orders.size < 1 %}
         <p class="py-4 mt-4 border-t border-blue-300">Item Administration</p>
         <span class="flex">
-          <a href="/items/edit?id={{ item.id }}" class="button">Edit</a>
-        <form action="/items/delete" method="post" class="ml-2"
+          <a href="/dashboard/items/edit?id={{ item.id }}" class="button">Edit</a>
+        <form action="/dashboard/items/delete" method="post" class="ml-2"
           onSubmit="if(!confirm('{{ 'app.confirm-delete' | t }}')){ return false; }"
         >
           {% render 'authenticity_token', authenticity_token: authenticity_token %}
