--- a/app/views/partials/theme/simple/layout/main.liquid
+++ b/app/views/partials/theme/simple/layout/main.liquid
@@ -1,5 +1,10 @@
 <div class="container flex flex-col min-h-screen">
-  {% include 'theme/simple/layout/header' %}
+  {% liquid
+    if context.current_user.id
+      assign profile = context.session.profile | default: '{}' | parse_json
+    endif
+    include 'theme/simple/layout/header', profile: profile
+  %}
 
   <main class="flex-1">
     {% include 'lib/flash/display' %}
