Highlight sidebar active link

--- a/app/views/partials/theme/simple/dashboard/sidebar.liquid
+++ b/app/views/partials/theme/simple/dashboard/sidebar.liquid
@@ -1,4 +1,4 @@
-<div class="w-64 h-screen bg-white shadow">
+<div class="w-64 h-screen bg-white shadow" data-dashboard-sidebar>
   <nav class="mt-10">
     <div x-data="{ open: true }">
       <button @click="open = !open" class="w-full flex justify-between items-center py-3 px-6 text-gray-600 cursor-pointer hover:bg-gray-100 hover:text-gray-700 focus:outline-none">
