--- a/app/views/partials/theme/simple/layout/footer.liquid
+++ b/app/views/partials/theme/simple/layout/footer.liquid
@@ -1,10 +1,82 @@
-<footer class="border-t border-gray-300">
-  <div class="container flex flex-col items-center py-8 mx-auto sm:flex-row">
-    <div class="flex items-center justify-center font-medium md:justify-start">
-      <span class="text-xl">{{ 'app.title' | t }}</span>
+<footer class="text-gray-700 body-font border-t border-gray-300">
+  <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
+    <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
+      <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-500 rounded-full" viewBox="0 0 24 24">
+          <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+        </svg>
+        <span class="ml-3 text-xl">{{ 'app.title' | t }}</span>
+      </a>
+      <p class="mt-2 text-sm text-gray-500">MVP Marketplace template is modern marketplace to gather your clients together</p>
     </div>
-    <p class="mt-4 text-sm  sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0">© 2020 platformOS —
-      <a href="https://twitter.com/platformos" class="ml-1 " rel="noopener noreferrer" target="_blank">@platformos</a>
-    </p>
+    <div class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center">
+      <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+        <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">GENERAL</h2>
+        <nav class="list-none mb-10">
+          <li>
+            <a href="/" class="text-gray-600 hover:text-gray-800">Home</a>
+          </li>
+          <li>
+            <a href="about-us" class="text-gray-600 hover:text-gray-800">About us</a>
+          </li>
+          <li>
+            <a href="terms-of-service" class="text-gray-600 hover:text-gray-800">Terms of service</a>
+          </li>
+        </nav>
+      </div>
+      <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+        <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">JOIN</h2>
+        <nav class="list-none mb-10">
+          <li>
+            <a href="/sign-up" class="text-gray-600 hover:text-gray-800">Sign Up</a>
+          </li>
+          <li>
+            <a href="/sessions/new" class="text-gray-600 hover:text-gray-800">Log In</a>
+          </li>
+        </nav>
+      </div>
+      <div class="lg:w-1/4 md:w-1/2 w-full px-4">
+        <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">SUPPORT</h2>
+        <nav class="list-none mb-10">
+          <li>
+            <a href="/contact-us" class="text-gray-600 hover:text-gray-800">Contact Us</a>
+          </li>
+          <li>
+            <a href="/faq" class="text-gray-600 hover:text-gray-800">FAQ</a>
+          </li>
+        </nav>
+      </div>
+    </div>
+  </div>
+  <div class="bg-gray-200">
+    <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
+      <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 {{ 'app.title' | t }} — Powered by
+        <a href="https://platformos.com" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">platformOS</a>
+      </p>
+      <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+        <a class="text-gray-500">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-500" href="https://twitter.com/platformos">
+          <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <path d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-500">
+          <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
+            <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+            <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
+          </svg>
+        </a>
+        <a class="ml-3 text-gray-500">
+          <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+            <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
+            <circle cx="4" cy="4" r="2" stroke="none"></circle>
+          </svg>
+        </a>
+      </span>
+    </div>
   </div>
 </footer>
