--- a/app/views/partials/theme/simple/dashboard/sidebar.liquid
+++ b/app/views/partials/theme/simple/dashboard/sidebar.liquid
@@ -1,5 +1,5 @@
-<div class="w-64 h-screen bg-white shadow" data-dashboard-sidebar>
-  <nav class="mt-10">
+<div class="lg:w-1/5 md:w-1/3 md:h-screen bg-white shadow mb-5" data-dashboard-sidebar>
+  <nav class="mt-10 mb-5">
     <div x-data="{ open: true }">
       <button @click="open = !open" class="w-full flex justify-between items-center py-3 px-6 text-gray-600 cursor-pointer hover:bg-gray-100 hover:text-gray-700 focus:outline-none">
         <span class="flex items-center">
