--- a/app/views/pages/dashboard/items/edit.liquid
+++ b/app/views/pages/dashboard/items/edit.liquid
@@ -6,8 +6,7 @@ metadata:
     - label: app.edit
 ---
 {% liquid
-  include 'lib/must_be_authenticated'
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
 
   function_rc item = 'lib/data/queries/items/find', id: params.id
 
