--- a/app/views/pages/groups/members.liquid
+++ b/app/views/pages/groups/members.liquid
@@ -1,15 +1,13 @@
 {% liquid
-  include 'lib/must_be_authenticated'
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true, membership: true
 
   assign group_id = context.params.slug3 | split: '-' | last
   function_rc group = 'lib/data/queries/groups/find', id: group_id, with_owner: false
-
   unless group.id
     render 'theme/simple/404', status: 404
     break
   endunless
 
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, membership: true
   function list = 'lib/data/queries/relationships/search', limit: 20, name: 'membership', r_id: group_id
 
   include 'theme/simple/groups/show', group: group, current_user: current_user, tab: 'members', list: list, context: context
