--- a/app/views/pages/groups/show.liquid
+++ b/app/views/pages/groups/show.liquid
@@ -2,13 +2,12 @@
 slug: groups/show
 ---
 {% liquid
-  include 'lib/must_be_authenticated'
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true, membership: true
 
   assign group_id = context.params.slug3 | split: '-' | last
   function group = 'lib/data/queries/groups/find', id: group_id, with_owner: true
   include 'lib/present_or_404', property: group.id
 
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, membership: true
   function list = 'lib/data/queries/activities/search', feed: 'group-public', feed_id: group.id, limit: 100
   function presigned_url = 'lib/data/queries/presigned_url'
 
