--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, followships: true
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, followships: true
 
   function items = 'lib/data/queries/activities/search', feed: 'system', feed_id: "5", limit: 3
   function comments = 'lib/data/queries/activities/search', feed: 'system', feed_id: "2", limit: 3
