--- a/app/views/pages/items/show.liquid
+++ b/app/views/pages/items/show.liquid
@@ -3,7 +3,7 @@ slug: items
 ---
 
 {% liquid
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id, followships: true
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, followships: true
   include 'lib/validate_profile_completeness', profile: current_user
 
   assign id = context.params.slug2 | split: '-' | last
