--- a/app/views/pages/order_statuses/create.liquid
+++ b/app/views/pages/order_statuses/create.liquid
@@ -4,9 +4,7 @@ slug: order_statuses/create
 ---
 
 {% liquid
-  include 'lib/must_be_authenticated'
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
-
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
   function_rc object = 'lib/commands/order_statuses/create', order_id: context.params.order_id, current_user_id: current_user.id, name: context.params.status
 
   if object.valid
