--- a/app/views/pages/orders/new.liquid
+++ b/app/views/pages/orders/new.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  include 'lib/must_be_authenticated'
+  function current_user = 'lib/current_profile', user_id: context.current_user.id, required: true
 
   function_rc item = 'lib/data/queries/items/find', id: context.params.item_id
 
