--- a/app/views/pages/users/listing.liquid
+++ b/app/views/pages/users/listing.liquid
@@ -2,7 +2,7 @@
 slug: u
 ---
 {% liquid
-  function current_user = 'lib/data/queries/profiles/find', user_id: context.current_user.id
+  function current_user = 'lib/current_profile', user_id: context.current_user.id
   function user = 'lib/data/queries/profiles/find', id: context.params.slug2
 
   if user == blank
