target blank deleted from your public profile

--- a/app/views/partials/theme/simple/dashboard/sidebar.liquid
+++ b/app/views/partials/theme/simple/dashboard/sidebar.liquid
@@ -63,7 +63,7 @@
 
       <div x-show="open" class="">
         <a class="py-2 px-16 block  text-gray-600 hover:bg-white " href="/dashboard">{{ 'app.p-dashboard.your-feed' | t }}</a>
-        <a class="py-2 px-16 block  text-gray-600 hover:bg-white " target="_blank" href="/profile/{{profile.slug}}">{{ 'app.p-dashboard.your-profile' | t }}</a>
+        <a class="py-2 px-16 block  text-gray-600 hover:bg-white " href="/profile/{{profile.slug}}">{{ 'app.p-dashboard.your-profile' | t }}</a>
         <a class="py-2 px-16 block  text-gray-600 hover:bg-white " href="/dashboard/profile/edit">{{ 'app.p-dashboard.edit-profile' | t }}</a>
         <a class="py-2 px-16 block  text-gray-600 hover:bg-white " href="/dashboard/groups">{{ 'app.p-dashboard.your-groups' | t }}</a>
       </div>
