dashboard/groups empty_state html classes cleanup

--- a/app/views/partials/theme/simple/dashboard/groups/empty_state.liquid
+++ b/app/views/partials/theme/simple/dashboard/groups/empty_state.liquid
@@ -1,12 +1,10 @@
-<section class="text-gray-700 body-font">
-  <div class="container px-5 py-24 mx-auto">
-    <div class="lg:w-2/3 flex flex-col sm:flex-row sm:items-center items-start mx-auto">
-      <h1 class="flex-grow sm:pr-16 text-2xl font-medium title-font text-gray-900">
-        You haven’t added any groups yet. Create your first one now!
-      </h1>
-      <a href="/dashboard/groups/new" class="button">
-        Add group
-      </a>
-    </div>
-  </div>
-</section>
+<div class="flex items-center justify-around py-20">
+  <h1 class="text-2xl font-medium">
+    You haven’t added any groups yet. <br>
+    Create your first one now!
+  </h1>
+
+  <a href="/dashboard/groups/new" class="text-lg button">
+    Add group
+  </a>
+</div>
