--- a/app/views/partials/theme/simple/layout/footer.liquid
+++ b/app/views/partials/theme/simple/layout/footer.liquid
@@ -1,18 +1,18 @@
-<footer class="text-gray-700 body-font border-t border-gray-300 mt-10">
-  <div class="container px-5 py-24 mx-auto flex md:items-center lg:items-start md:flex-row md:flex-no-wrap flex-wrap flex-col">
-    <div class="w-64 flex-shrink-0 md:mx-0 mx-auto text-center md:text-left">
-      <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-500 rounded-full" viewBox="0 0 24 24">
+<footer class="mt-10 text-gray-700 border-t border-gray-300 body-font">
+  <div class="container flex flex-col flex-wrap px-5 py-24 mx-auto md:items-center lg:items-start md:flex-row md:flex-no-wrap">
+    <div class="flex-shrink-0 w-64 mx-auto text-center md:mx-0 md:text-left">
+      <a class="flex items-center justify-center font-medium text-gray-900 md:justify-start">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 p-2 text-white bg-blue-500 rounded-full" viewBox="0 0 24 24">
           <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
         </svg>
         <span class="ml-3 text-xl">{{ 'app.title' | t }}</span>
       </a>
       <p class="mt-2 text-sm text-gray-500">MVP Marketplace template is modern marketplace to gather your clients together</p>
     </div>
-    <div class="flex-grow flex flex-wrap md:pl-20 -mb-10 md:mt-0 mt-10 md:text-left text-center">
-      <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-        <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">GENERAL</h2>
-        <nav class="list-none mb-10">
+    <div class="flex flex-wrap flex-grow mt-10 -mb-10 text-center md:pl-20 md:mt-0 md:text-left">
+      <div class="w-full px-4 lg:w-1/4 md:w-1/2">
+        <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900 title-font">GENERAL</h2>
+        <nav class="mb-10 list-none">
           <li>
             <a href="/" class="text-gray-600 hover:text-gray-800">Home</a>
           </li>
@@ -24,9 +24,9 @@
           </li>
         </nav>
       </div>
-      <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-        <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">JOIN</h2>
-        <nav class="list-none mb-10">
+      <div class="w-full px-4 lg:w-1/4 md:w-1/2">
+        <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900 title-font">JOIN</h2>
+        <nav class="mb-10 list-none">
           <li>
             <a href="/sign-up" class="text-gray-600 hover:text-gray-800">Sign Up</a>
           </li>
@@ -35,9 +35,9 @@
           </li>
         </nav>
       </div>
-      <div class="lg:w-1/4 md:w-1/2 w-full px-4">
-        <h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3">SUPPORT</h2>
-        <nav class="list-none mb-10">
+      <div class="w-full px-4 lg:w-1/4 md:w-1/2">
+        <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900 title-font">SUPPORT</h2>
+        <nav class="mb-10 list-none">
           <li>
             <a href="/contact-us" class="text-gray-600 hover:text-gray-800">Contact Us</a>
           </li>
@@ -49,11 +49,11 @@
     </div>
   </div>
   <div class="bg-gray-200">
-    <div class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row">
-      <p class="text-gray-500 text-sm text-center sm:text-left">© 2020 {{ 'app.title' | t }} — Powered by
-        <a href="https://platformos.com" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">platformOS</a>
+    <div class="container flex flex-col flex-wrap px-5 py-4 mx-auto sm:flex-row">
+      <p class="text-sm text-center text-gray-500 sm:text-left">© 2020 {{ 'app.title' | t }} — Powered by
+        <a href="https://platformos.com" rel="noopener noreferrer" class="ml-1 text-gray-600" target="_blank">platformOS</a>
       </p>
-      <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
+      <span class="inline-flex justify-center mt-2 sm:ml-auto sm:mt-0 sm:justify-start">
         <a class="text-gray-500">
           <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
             <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
