--- a/app/views/partials/theme/simple/profile/user_card.liquid
+++ b/app/views/partials/theme/simple/profile/user_card.liquid
@@ -9,7 +9,7 @@
     <img class="object-cover object-center w-24 h-24 mx-auto rounded-full shadow-md md:h-48 md:w-48" src="{{ img_url }}" alt="{{ user.slug }}">
 
     <div class="p-6">
-      <h2 class="mb-1 font-medium text-gray-900 title-font">
+      <h2 class="mb-1 font-medium text-gray-900">
         <a href="/profile/{{ user.slug }}">
           {% print user.name %}
         </a>
