--- a/app/views/partials/theme/simple/admin/index.liquid
+++ b/app/views/partials/theme/simple/admin/index.liquid
@@ -3,7 +3,7 @@
     <div class="lg:w-1/2 md:w-full">
       <div class="flex flex-col p-6 border-2 border-gray-200 rounded-lg sm:flex-row">
         <div class="flex-grow">
-          <h2 class="mb-3 text-lg font-medium text-gray-900 title-font">Recent items</h2>
+          <h2 class="mb-3 text-lg font-medium text-gray-900">Recent items</h2>
           <div class="mx-4">
 
             <h2>users</h2>
@@ -38,7 +38,7 @@
     <div class="pl-4 lg:w-1/2 md:w-full">
       <div class="flex flex-col p-6 border-2 border-gray-200 rounded-lg sm:flex-row">
         <div class="flex-grow">
-          <h2 class="mb-3 text-lg font-medium text-gray-900 title-font">Event logs</h2>
+          <h2 class="mb-3 text-lg font-medium text-gray-900">Event logs</h2>
         </div>
       </div>
     </div>
