--- a/app/views/partials/theme/simple/groups/nav.liquid
+++ b/app/views/partials/theme/simple/groups/nav.liquid
@@ -1,17 +1,17 @@
-  <nav class="flex justify-between sm:flex-row bg-white mb-5">
-    <div class="flex">
+  <nav class="flex justify-between mb-5 bg-white sm:flex-row">
+    <div class="flex h-full text-lg">
       {% assign active_class = 'text-blue-500 border-b-2 font-medium border-blue-500'  %}
-      <a href="/groups/show/{{group.id}}" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == 'activity' %}{{ active_class }}{% endif %}">
+      <a href="/groups/show/{{ group.id }}" class="py-5 px-6 hover:text-blue-500 focus:outline-none {% if tab == 'activity' %}{{ active_class }}{% endif %}">
         Activity
       </a>
-      <a href="/groups/about/{{group.id}}" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == 'about' %}{{ active_class }}{% endif %}">
+      <a href="/groups/about/{{ group.id }}" class="py-5 px-6 hover:text-blue-500 focus:outline-none {% if tab == 'about' %}{{ active_class }}{% endif %}">
         About
       </a>
-      <a href="/groups/members/{{group.id}}" class="text-gray-600 py-4 px-6 block hover:text-blue-500 focus:outline-none {% if tab == 'members' %}{{ active_class }}{% endif %}">
+      <a href="/groups/members/{{ group.id }}" class="py-5 px-6 hover:text-blue-500 focus:outline-none {% if tab == 'members' %}{{ active_class }}{% endif %}">
         Members
       </a>
     </div>
-    <div class="flex p-3">
+    <div class="flex items-center mr-3">
       {% render 'theme/simple/groups/join_button', group: group, current_user: current_user %}
     </div>
   </nav>
